--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -21,3 +21,15 @@ pre {
 table.docutils{
     border: 0;
 }
+
+.source-icon{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.source-icon svg{
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-top: 0.1rem;
+    margin-right: 0.1rem;
+}
